# ed25519-donna

./: .gitignore  CMakeLists.txt
src/: curve25519-donna-64bit.h  curve25519-donna-helpers.h  ed25519-donna-impl-base.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519.c  modm-donna-64bit.h  print.h  scratch.txt  test-ticks.h  test.c
